Ensure sketchpad link tags are not visible

--- a/@isle-project/components/sketchpad/sketchpad.css
+++ b/@isle-project/components/sketchpad/sketchpad.css
@@ -121,3 +121,7 @@
 	height: 100%;
 	padding: 0.375rem 0.75rem;
 }
+
+.textLayer a {
+	color: transparent
+}
